--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,1 +1,32 @@
-<p> hello this is index.html speaking </p>
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+
+	<meta charset="utf-8" />
+
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+	<link rel="stylesheet" href="/css/style.css">
+
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+	<script type="text/javascript" src="main.js"></script>
+
+	 <style>
+            body, html {
+                height: 100%;
+            }
+            .show-border {
+                border: 2px dashed red;
+            }
+        </style>
+</head>
+<body>
+
+
+        <div class="fullScreen">
+                <h1>HELLO</h1>
+        </div>
+</body>
+</html>
