--- a/app/views/index.html
+++ b/app/views/index.html
@@ -11,22 +11,33 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 	<script type="text/javascript" src="main.js"></script>
 
-	 <style>
-            body, html {
-                height: 100%;
-            }
-            .show-border {
-                border: 2px dashed red;
-            }
-        </style>
+
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono:700,700i&display=swap" rel="stylesheet">
+
 </head>
+
 <body>
 
 
-        <div class="fullScreen">
-                <h1>HELLO</h1>
+        <div class="row" style="height: 100%">
+        	<div class = "col-sm-5" style="background-color: blue; height: 100%; padding: 0;">
+       				<div class = "verticalCenter centerChildren">
+       					<h1 class = "white">Allan Turing</h1>
+       					<div class = "spacer"></div>
+       					<div>
+       						<p id = "changingProfessions" class = "white">Mathematician</p>
+       					</div>
+       				</div>
+        			   
+             </div>
+             <div class = "col-sm-7" style="height: 100%; padding: 0;">
+                <div class = "backgroundImage" style = "height: 100%; width: 100%; background-image: url(/images/turing.jpg)">
+        		</div>
+             </div>
+
         </div>
 </body>
 </html>
