--- a/app/views/index.html
+++ b/app/views/index.html
@@ -15,7 +15,7 @@
 	<script type="text/javascript" src="main.js"></script>
 
 
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono:700,700i&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono:300,300i,700,700i&display=swap" rel="stylesheet">
 
 </head>
 
@@ -25,16 +25,24 @@
         <div class="row" style="height: 100%">
         	<div class = "col-sm-5" style="background-color: blue; height: 100%; padding: 0;">
        				<div class = "verticalCenter centerChildren">
-       					<h1 class = "white">Allan Turing</h1>
+       					<h1 class = "white">Alan Turing</h1>
        					<div class = "spacer"></div>
        					<div>
-       						<p id = "changingProfessions" class = "white">Mathematician</p>
+       						<h2 id = "changingProfessions" class = "white">Mathematician</h2>
+       						<div class="spacer"></div>
+       						<!--<img src="/images/signature.svg" style="height: 40px;"> -->
+       						<div class = "buttonWrapper">
+       							<button id = "mainButton">ENTER</button>
+       							<div class = "buttonBG"></div>
+       						</div>
+       						
+
        					</div>
        				</div>
         			   
              </div>
              <div class = "col-sm-7" style="height: 100%; padding: 0;">
-                <div class = "backgroundImage" style = "height: 100%; width: 100%; background-image: url(/images/turing.jpg)">
+                <div id = "mainPageBg"class = "backgroundImage" style = "height: 100%; width: 100%; background-image: url(/images/turing.jpg)">
         		</div>
              </div>
 
