--- a/app/views/index.html
+++ b/app/views/index.html
@@ -23,20 +23,19 @@
 
 
         <div class="row" style="height: 100%">
-        	<div class = "col-sm-5" style="background-color: blue; height: 100%; padding: 0;">
+        	<div class = "col-sm-5 blue" style="height: 100%; padding: 0;">
        				<div class = "verticalCenter centerChildren">
        					<h1 class = "white">Alan Turing</h1>
        					<div class = "spacer"></div>
        					<div>
        						<h2 id = "changingProfessions" class = "white">Mathematician</h2>
        						<div class="spacer"></div>
+       						<div class="spacer"></div>
        						<!--<img src="/images/signature.svg" style="height: 40px;"> -->
        						<div class = "buttonWrapper">
-       							<button id = "mainButton">ENTER</button>
        							<div class = "buttonBG"></div>
+       							<button id = "mainButton">ENTER</button>
        						</div>
-       						
-
        					</div>
        				</div>
         			   
