--- a/app/views/index.html
+++ b/app/views/index.html
@@ -23,7 +23,7 @@
 
 
         <div class="row" style="height: 100%">
-        	<div class = "col-sm-5 blue" style="height: 100%; padding: 0;">
+        	<div id="bigBlue" class = "col-sm-5 blue" style="height: 100%; padding: 0;">
        				<div class = "verticalCenter centerChildren">
        					<h1 class = "white">Alan Turing</h1>
        					<div class = "spacer"></div>
@@ -32,15 +32,15 @@
        						<div class="spacer"></div>
        						<div class="spacer"></div>
        						<!--<img src="/images/signature.svg" style="height: 40px;"> -->
-       						<div class = "buttonWrapper">
+       						<div id = "mButtonWrapper" class = "buttonWrapper">
        							<div class = "buttonBG"></div>
-       							<button id = "mainButton">ENTER</button>
+       							<button id= "mainButton">ENTER</button>
        						</div>
        					</div>
        				</div>
         			   
              </div>
-             <div class = "col-sm-7" style="height: 100%; padding: 0;">
+             <div id = "toBeRemoved" class = "col-sm-7" style="height: 100%; padding: 0;">
                 <div id = "mainPageBg"class = "backgroundImage" style = "height: 100%; width: 100%; background-image: url(/images/turing.jpg)">
         		</div>
              </div>
