--- a/app/views/index.html
+++ b/app/views/index.html
@@ -20,31 +20,67 @@
 </head>
 
 <body>
+	        <div id = "firstRow" class="row" style="height: 100%">
+	        	<div id="bigBlue" class = "col-sm-5 blue" style="height: 100%; padding: 0;">
+	       				<div class = "verticalCenter centerChildren">
+	       					<h1 class = "white">Alan Turing</h1>
+	       					<div class = "spacer"></div>
+	       					<div>
+	       						<h2 id = "changingProfessions" class = "white">Mathematician</h2>
+	       						<div class="spacer"></div>
+	       						<div class="spacer"></div>
+	       						<!--<img src="/images/signature.svg" style="height: 40px;"> -->
+	       						<div id = "mButtonWrapper" class = "buttonWrapper">
+	       							<div class = "buttonBG"></div>
+	       							<button id= "mainButton">ENTER</button>
+	       						</div>
+	       					</div>
+	       				</div>
+	        			   
+	             </div>
+	             <div id = "toBeRemoved" class = "col-sm-7" style="height: 100%; padding: 0;">
+	                <div id = "mainPageBg"class = "backgroundImage" style = "height: 100%; width: 100%; background-image: url(/images/turing.jpg)">
+	        		</div>
+	             </div>
+	        </div>
+
+	       
+
+        <section id = "secondPage" style="display: none;">
+        	 <div class="spacer"></div>
+	        <div class="spacer"></div>
+	        <div class="spacer"></div>
+        	
+        		<div class = "row oneColumnMargin">
+        			<div class = "col-sm-6 verticalMargin">
+        				<h1 class = "giantText alignRight verticalChild" style="color: blue; opacity: 1;text-align: right;">"We can only see a short distance ahead, but we can see plenty there that needs to be done."<br><span class = "smallGrey">-Alan Turing</span></h1>
 
 
-        <div class="row" style="height: 100%">
-        	<div id="bigBlue" class = "col-sm-5 blue" style="height: 100%; padding: 0;">
-       				<div class = "verticalCenter centerChildren">
-       					<h1 class = "white">Alan Turing</h1>
-       					<div class = "spacer"></div>
-       					<div>
-       						<h2 id = "changingProfessions" class = "white">Mathematician</h2>
-       						<div class="spacer"></div>
-       						<div class="spacer"></div>
-       						<!--<img src="/images/signature.svg" style="height: 40px;"> -->
-       						<div id = "mButtonWrapper" class = "buttonWrapper">
-       							<div class = "buttonBG"></div>
-       							<button id= "mainButton">ENTER</button>
-       						</div>
-       					</div>
-       				</div>
-        			   
-             </div>
-             <div id = "toBeRemoved" class = "col-sm-7" style="height: 100%; padding: 0;">
-                <div id = "mainPageBg"class = "backgroundImage" style = "height: 100%; width: 100%; background-image: url(/images/turing.jpg)">
+        			</div>
+        			
+        			<div class = "col-sm-6">
+        				<p  style="color: black">Alan Turing , in full Alan Mathison Turing, (born June 23, 1912, London, England—died June 7, 1954, Wilmslow, Cheshire), British mathematician and logician, who made major contributions to mathematics, cryptanalysis, logic, philosophy, and mathematical biology and also to the new areas later named computer science, cognitive science, artificial intelligence, and artificial life.
+        				<br><br>
+        				 In his seminal 1936 paper, he proved that there cannot exist any universal algorithmic method of determining truth in mathematics, and that mathematics will always contain undecidable propositions. That paper also introduced the "Turing machine. His papers on the subject are widely acknowledged as the foundation of research in artificial intelligence.</p>
+        			</div>
         		</div>
-             </div>
 
-        </div>
+        		<div class="spacer"></div>
+<div class="spacer"></div><div class="spacer"></div>
+        		<div class = "row oneColumnMargin">
+        			<div class = "col-sm-6">
+        				<p  style="color: black ;text-align: right;">Alan Turing , in full Alan Mathison Turing, (born June 23, 1912, London, England—died June 7, 1954, Wilmslow, Cheshire), British mathematician and logician, who made major contributions to mathematics, cryptanalysis, logic, philosophy, and mathematical biology and also to the new areas later named computer science, cognitive science, artificial intelligence, and artificial life.</p>
+        			</div>
+
+        			<div class = "col-sm-6">
+        				<h1 class = "giantText" style="color: blue; opacity: 1;">behind every code is an enigma</h1>
+        			</div>
+        			
+        			
+        		</div>
+
+				
+        
+        </section>
 </body>
 </html>
