--- a/app/views/index.html
+++ b/app/views/index.html
@@ -20,67 +20,130 @@
 </head>
 
 <body>
-	        <div id = "firstRow" class="row" style="height: 100%">
-	        	<div id="bigBlue" class = "col-sm-5 blue" style="height: 100%; padding: 0;">
-	       				<div class = "verticalCenter centerChildren">
-	       					<h1 class = "white">Alan Turing</h1>
-	       					<div class = "spacer"></div>
-	       					<div>
-	       						<h2 id = "changingProfessions" class = "white">Mathematician</h2>
-	       						<div class="spacer"></div>
-	       						<div class="spacer"></div>
-	       						<!--<img src="/images/signature.svg" style="height: 40px;"> -->
-	       						<div id = "mButtonWrapper" class = "buttonWrapper">
-	       							<div class = "buttonBG"></div>
-	       							<button id= "mainButton">ENTER</button>
-	       						</div>
-	       					</div>
-	       				</div>
-	        			   
-	             </div>
-	             <div id = "toBeRemoved" class = "col-sm-7" style="height: 100%; padding: 0;">
-	                <div id = "mainPageBg"class = "backgroundImage" style = "height: 100%; width: 100%; background-image: url(/images/turing.jpg)">
-	        		</div>
-	             </div>
-	        </div>
+	<div id = "firstRow" class="row" style="height: 100%">
+		<div id="bigBlue" class = "col-sm-5 col-xs-7 blue verticalParent" style="height: 100%; padding: 40px;">
+			<div class = "verticalChild">
+				<h1 class = "white">Alan Turing</h1>
+				<div class = "spacer"></div>
+				<div>
+					<h2 id = "changingProfessions" class = "white">Mathematician</h2>
+					<div class="spacer"></div>
+					<div class="spacer"></div>
+					<!--<img src="/images/signature.svg" style="height: 40px;"> -->
+					<div id = "mButtonWrapper" class = "buttonWrapper">
+						<div class = "buttonBG"></div>
+						<button id= "mainButton">ENTER</button>
+					</div>
+				</div>
+			</div>
 
-	       
-
-        <section id = "secondPage" style="display: none;">
-        	 <div class="spacer"></div>
-	        <div class="spacer"></div>
-	        <div class="spacer"></div>
-        	
-        		<div class = "row oneColumnMargin">
-        			<div class = "col-sm-6 verticalMargin">
-        				<h1 class = "giantText alignRight verticalChild" style="color: blue; opacity: 1;text-align: right;">"We can only see a short distance ahead, but we can see plenty there that needs to be done."<br><span class = "smallGrey">-Alan Turing</span></h1>
+		</div>
+		<div id = "toBeRemoved" class = "col-sm-7" style="height: 100%; padding: 0;">
+			<div id = "mainPageBg"class = "backgroundImage" style = "height: 100%; width: 100%; background-image: url(/images/turing.jpg)">
+			</div>
+		</div>
+	</div>
 
 
-        			</div>
-        			
-        			<div class = "col-sm-6">
-        				<p  style="color: black">Alan Turing , in full Alan Mathison Turing, (born June 23, 1912, London, England—died June 7, 1954, Wilmslow, Cheshire), British mathematician and logician, who made major contributions to mathematics, cryptanalysis, logic, philosophy, and mathematical biology and also to the new areas later named computer science, cognitive science, artificial intelligence, and artificial life.
-        				<br><br>
-        				 In his seminal 1936 paper, he proved that there cannot exist any universal algorithmic method of determining truth in mathematics, and that mathematics will always contain undecidable propositions. That paper also introduced the "Turing machine. His papers on the subject are widely acknowledged as the foundation of research in artificial intelligence.</p>
-        			</div>
-        		</div>
 
-        		<div class="spacer"></div>
-<div class="spacer"></div><div class="spacer"></div>
-        		<div class = "row oneColumnMargin">
-        			<div class = "col-sm-6">
-        				<p  style="color: black ;text-align: right;">Alan Turing , in full Alan Mathison Turing, (born June 23, 1912, London, England—died June 7, 1954, Wilmslow, Cheshire), British mathematician and logician, who made major contributions to mathematics, cryptanalysis, logic, philosophy, and mathematical biology and also to the new areas later named computer science, cognitive science, artificial intelligence, and artificial life.</p>
-        			</div>
+	<section id = "secondPage" style="display: none;">
+		<div class="spacer"></div>
+		<div class="spacer"></div>
+		<div class="spacer"></div>
 
-        			<div class = "col-sm-6">
-        				<h1 class = "giantText" style="color: blue; opacity: 1;">behind every code is an enigma</h1>
-        			</div>
-        			
-        			
-        		</div>
+		<div class = "row oneColumnMargin">
+			<div class = "col-sm-6 verticalParent">
+				<h1 class = "giantText alignRight verticalChild" style="color: blue; opacity: 1;text-align: right;">"We can only see a short distance ahead, but we can see plenty there that needs to be done."<br><span class = "smallGrey">-Alan Turing</span></h1>
 
-				
-        
-        </section>
+
+			</div>
+
+			<div class = "col-sm-6">
+				<p  style="color: black">Alan Turing , in full Alan Mathison Turing, (born June 23, 1912, London, England—died June 7, 1954, Wilmslow, Cheshire), British mathematician and logician, who made major contributions to mathematics, cryptanalysis, logic, philosophy, and mathematical biology and also to the new areas later named computer science, cognitive science, artificial intelligence, and artificial life.
+					<br><br>
+				In his seminal 1936 paper, he proved that there cannot exist any universal algorithmic method of determining truth in mathematics, and that mathematics will always contain undecidable propositions. That paper also introduced the "Turing machine". His papers on the subject are widely acknowledged as the foundation of research in artificial intelligence.</p>
+			</div>
+		</div>
+
+		<div class="spacer"></div>
+		<div class="spacer"></div>
+		<div class="spacer"></div>
+
+		<div class = "row oneColumnMargin">
+			<div class = "col-sm-6">
+				<img class = "alignRight verticalChild" src = "/images/machine.png" style="height:200px">
+			</div>
+
+			<div class = "col-sm-6">
+				<h1 class = "giantText" style="color: blue; opacity: 1;">Breaking the code</h1>
+				<p  style="color: black ">In WWII, Nazi forces used an engima to encode all thier messages. Codebreaking was incredibly difficult as the method of encoding would change frequently. Computations done by hand were tedious and error-prone. Enter the Turing Machine, designed by Turing to automate many of the computations needed to break the codes. His device is estimated to have shortened the war by two years, saving <b>14 million lives</b></p>
+			</div>
+		</div>
+
+		<div class="spacer"></div>
+		<div class="spacer"></div>
+		<div class="spacer"></div>
+		<div class="spacer"></div>
+		<div class="spacer"></div>
+		<div class="spacer"></div>
+
+		<h1 style= "text-align: center;">Gallery</h1>
+
+		<div class="spacer"></div>
+		<div class="spacer"></div>
+		<div class="spacer"></div>
+
+		<div class="card-columns oneColumnMargin">
+			<div class="card">
+				<img class="card-img" src="/images/cards/2.png" alt="Card image">
+			</div>
+			<div class="card p-3 text-right" style="background-color: blue;">
+				<blockquote class="blockquote mb-0">
+					<h2 class="white">I propose to consider the question, 'Can machines think?</h2>
+					<small class = "white">
+						- Alan turing	
+					</small>
+				</blockquote>
+			</div>
+			<div class="card">
+				<img class="card-img" src="/images/machine.png">
+			</div>
+
+			<div class="card">
+				<img class="card-img" src="/images/cards/3.jpg" alt="Card image">
+			</div>
+			<div class="card">
+				<img class="card-img" src="/images/cards/4.jpg" alt="Card image">
+			</div>
+			<div class="card">
+				<img class="card-img" src="/images/cards/7.jpg" alt="Card image">
+			</div>
+			<div class="card">
+				<img class="card-img" src="/images/cards/6.jpg" alt="Card image">
+			</div>
+			<div class="card text-center">
+				<div class="card-body">
+					<img class="card-img" src="/images/cards/5.jpg">
+				</div>
+			</div>
+			
+			<div class="card">
+				<img class="card-img" src="/images/cards/1.jpg" alt="Card image">
+			</div>
+			
+			<div class="card p-3 text-left" style="background-color: blue;">
+				<blockquote class="blockquote mb-0">
+					<h2 class="white">A computer would deserve to be called intelligent if it could deceive a human into believing that it was human.</h2>
+					<small class = "white">
+						- Alan turing	
+					</small>
+				</blockquote>
+			</div>
+			<div class="card">
+				<img class="card-img" src="/images/moviePoster.jpg" alt="Card image cap">
+			</div>
+		</div>
+
+	</section>
 </body>
 </html>
