--- a/app/views/index.html
+++ b/app/views/index.html
@@ -17,13 +17,15 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono:300,300i,700,700i&display=swap" rel="stylesheet">
 
+	 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+	 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 </head>
 
 <body>
 	<div id = "firstRow" class="row" style="height: 100%">
 		<div id="bigBlue" class = "col-sm-5 col-xs-7 blue verticalParent" style="height: 100%; padding: 40px;">
 			<div class = "verticalChild">
-				<h1 class = "white">Alan Turing</h1>
+				<h1  class = "white">Alan Turing</h1>
 				<div class = "spacer"></div>
 				<div>
 					<h2 id = "changingProfessions" class = "white">Mathematician</h2>
@@ -59,7 +61,7 @@
 			</div>
 
 			<div class = "col-sm-6">
-				<p  style="color: black">Alan Turing , in full Alan Mathison Turing, (born June 23, 1912, London, England—died June 7, 1954, Wilmslow, Cheshire), British mathematician and logician, who made major contributions to mathematics, cryptanalysis, logic, philosophy, and mathematical biology and also to the new areas later named computer science, cognitive science, artificial intelligence, and artificial life.
+				<p style="color: black">Alan Turing , in full Alan Mathison Turing, (born June 23, 1912, London, England—died June 7, 1954, Wilmslow, Cheshire), British mathematician and logician, who made major contributions to mathematics, cryptanalysis, logic, philosophy, and mathematical biology and also to the new areas later named computer science, cognitive science, artificial intelligence, and artificial life.
 					<br><br>
 				In his seminal 1936 paper, he proved that there cannot exist any universal algorithmic method of determining truth in mathematics, and that mathematics will always contain undecidable propositions. That paper also introduced the "Turing machine". His papers on the subject are widely acknowledged as the foundation of research in artificial intelligence.</p>
 			</div>
@@ -122,9 +124,7 @@
 				<img class="card-img" src="/images/cards/6.jpg" alt="Card image">
 			</div>
 			<div class="card text-center">
-				<div class="card-body">
 					<img class="card-img" src="/images/cards/5.jpg">
-				</div>
 			</div>
 			
 			<div class="card">
@@ -145,5 +145,11 @@
 		</div>
 
 	</section>
+	
+  <script>
+    AOS.init({
+  duration: 1200,
+})
+  </script>
 </body>
 </html>
