added cool effects

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -25,7 +25,7 @@
 	<div id = "firstRow" class="row" style="height: 100%">
 		<div id="bigBlue" class = "col-sm-5 col-xs-7 blue verticalParent" style="height: 100%; padding: 40px;">
 			<div class = "verticalChild">
-				<h1  class = "white">Alan Turing</h1>
+				<h1 class = "white">Alan Turing</h1>
 				<div class = "spacer"></div>
 				<div>
 					<h2 id = "changingProfessions" class = "white">Mathematician</h2>
@@ -53,7 +53,7 @@
 		<div class="spacer"></div>
 		<div class="spacer"></div>
 
-		<div class = "row oneColumnMargin">
+		<div id = "refreshAOS" class = "row oneColumnMargin">
 			<div class = "col-sm-6 verticalParent">
 				<h1 class = "giantText alignRight verticalChild" style="color: blue; opacity: 1;text-align: right;">"We can only see a short distance ahead, but we can see plenty there that needs to be done."<br><span class = "smallGrey">-Alan Turing</span></h1>
 
@@ -89,17 +89,18 @@
 		<div class="spacer"></div>
 		<div class="spacer"></div>
 
-		<h1 style= "text-align: center;">Gallery</h1>
+		<h1 id = "refreshAOS" style= "text-align: center;">Gallery</h1>
 
 		<div class="spacer"></div>
 		<div class="spacer"></div>
 		
 
 		<div class="card-columns oneColumnMargin">
-			<div class="card">
+            <div class="spacer"></div>
+			<div data-aos ="fade-up" class="card">
 				<img class="card-img" src="/images/cards/2.png" alt="Card image">
 			</div>
-			<div class="card p-3 text-right" style="background-color: blue;">
+			<div data-aos ="fade-up" class="card p-3 text-right" style="background-color: blue;">
 				<blockquote class="blockquote mb-0">
 					<h2 class="white">I propose to consider the question, 'Can machines think?</h2>
 					<small class = "white">
@@ -107,31 +108,31 @@
 					</small>
 				</blockquote>
 			</div>
-			<div class="card">
+			<div data-aos ="fade-up" class="card">
 				<img class="card-img" src="/images/machine.png">
 			</div>
 
-			<div class="card">
+			<div data-aos ="fade-up" class="card">
 				<img class="card-img" src="/images/cards/3.jpg" alt="Card image">
 			</div>
-			<div class="card">
+			<div data-aos ="fade-up" class="card">
 				<img class="card-img" src="/images/cards/4.jpg" alt="Card image">
 			</div>
-			<div class="card">
+			<div data-aos ="fade-up" class="card">
 				<img class="card-img" src="/images/cards/7.jpg" alt="Card image">
 			</div>
-			<div class="card">
+			<div data-aos ="fade-up" class="card">
 				<img class="card-img" src="/images/cards/6.jpg" alt="Card image">
 			</div>
-			<div class="card text-center">
+			<div data-aos ="fade-up" class="card text-center">
 					<img class="card-img" src="/images/cards/5.jpg">
 			</div>
-			
-			<div class="card">
+			<div class = "spacer"></div>
+			<div data-aos ="fade-up" class="card">
 				<img class="card-img" src="/images/cards/1.jpg" alt="Card image">
 			</div>
 			
-			<div class="card p-3 text-left" style="background-color: blue;">
+			<div data-aos ="fade-up" class="card p-3 text-left" style="background-color: blue;">
 				<blockquote class="blockquote mb-0">
 					<h2 class="white">A computer would deserve to be called intelligent if it could deceive a human into believing that it was human.</h2>
 					<small class = "white">
@@ -139,7 +140,7 @@
 					</small>
 				</blockquote>
 			</div>
-			<div class="card">
+			<div data-aos ="fade-up" class="card">
 				<img class="card-img" src="/images/moviePoster.jpg" alt="Card image cap">
 			</div>
 		</div>
@@ -147,9 +148,7 @@
 	</section>
 	
   <script>
-    AOS.init({
-  duration: 1200,
-})
+    AOS.init();
   </script>
 </body>
 </html>
