--- a/app/views/index.html
+++ b/app/views/index.html
@@ -89,7 +89,7 @@
 		<div class="spacer"></div>
 		<div class="spacer"></div>
 
-		<h1 id = "refreshAOS" style= "text-align: center;">Gallery</h1>
+		<h1 style= "text-align: center;">Gallery</h1>
 
 		<div class="spacer"></div>
 		<div class="spacer"></div>
@@ -97,10 +97,13 @@
 
 		<div class="card-columns oneColumnMargin">
             <div class="spacer"></div>
-			<div data-aos ="fade-up" class="card">
+            <div data-aos ="fade-up" >
+			<div class="card">
 				<img class="card-img" src="/images/cards/2.png" alt="Card image">
 			</div>
-			<div data-aos ="fade-up" class="card p-3 text-right" style="background-color: blue;">
+            </div>
+			<div data-aos ="fade-up" >
+			<div  class="card p-3 text-right" style="background-color: blue;">
 				<blockquote class="blockquote mb-0">
 					<h2 class="white">I propose to consider the question, 'Can machines think?</h2>
 					<small class = "white">
@@ -108,43 +111,106 @@
 					</small>
 				</blockquote>
 			</div>
-			<div data-aos ="fade-up" class="card">
+            </div>
+			<div data-aos ="fade-up" >
+			<div  class="card">
 				<img class="card-img" src="/images/machine.png">
 			</div>
-
-			<div data-aos ="fade-up" class="card">
+            </div>
+			<div data-aos ="fade-up" >
+			<div  class="card">
 				<img class="card-img" src="/images/cards/3.jpg" alt="Card image">
 			</div>
-			<div data-aos ="fade-up" class="card">
+            </div>
+			<div data-aos ="fade-up" >
+			<div  class="card">
 				<img class="card-img" src="/images/cards/4.jpg" alt="Card image">
 			</div>
-			<div data-aos ="fade-up" class="card">
+            </div>
+			<div data-aos ="fade-up" >
+			<div  class="card">
 				<img class="card-img" src="/images/cards/7.jpg" alt="Card image">
 			</div>
-			<div data-aos ="fade-up" class="card">
+            </div>
+			<div data-aos ="fade-up" >
+			<div  class="card">
 				<img class="card-img" src="/images/cards/6.jpg" alt="Card image">
 			</div>
-			<div data-aos ="fade-up" class="card text-center">
+            </div>
+			<div data-aos ="fade-up" >
+			<div  class="card text-center">
 					<img class="card-img" src="/images/cards/5.jpg">
 			</div>
+            </div>
 			<div class = "spacer"></div>
-			<div data-aos ="fade-up" class="card">
+			<div data-aos ="fade-up">
+			<div  class="card">
 				<img class="card-img" src="/images/cards/1.jpg" alt="Card image">
 			</div>
-			
-			<div data-aos ="fade-up" class="card p-3 text-left" style="background-color: blue;">
+			</div>
+			<div data-aos ="fade-up" >
+			<div  class="card p-3 text-left" style="background-color: blue;">
 				<blockquote class="blockquote mb-0">
 					<h2 class="white">A computer would deserve to be called intelligent if it could deceive a human into believing that it was human.</h2>
 					<small class = "white">
 						- Alan turing	
 					</small>
 				</blockquote>
+            </div>
 			</div>
-			<div data-aos ="fade-up" class="card">
+			<div data-aos ="fade-up" >
+			<div  class="card">
 				<img class="card-img" src="/images/moviePoster.jpg" alt="Card image cap">
 			</div>
+            </div>
 		</div>
+        
+        <div class="spacer"></div>
+		<div class="spacer"></div>
+		<div class="spacer"></div>
+		<div class="spacer"></div>
+		<div class="spacer"></div>
+		<div class="spacer"></div>
+        
+        <h1 style="text-align: center; color:blue">Alan Turing</h1>
+        <h1 style= "text-align: center;">1912  &#8212; 1954</h1>
 
+		<div class="spacer"></div>
+		<div class="spacer"></div>
+        
+        <div class = "row oneColumnMargin">
+			<div class = "col-sm-6">
+				<img class = "alignRight " src = "/images/pardoned.jpg" style="height:550px">
+			</div>
+
+			<div class = "col-sm-6">
+                <div class = "verticalChild">
+				    <h1 class = "giantText" style="color: blue; opacity: 1;">True to Himself</h1>
+				    <p  style="color: black">Turing was also openly gay and in the early 1950s was arrested and punished for his sexual orientation by the same government he served. <br><br>
+                         He made no serious denial or defence, instead telling everyone that he saw no wrong with his actions. He was particularly concerned to be open about his sexuality even in the hard and unsympathetic atmosphere of Manchester engineering. Rather than go to prison he accepted, for the period of a year, injections of oestrogen intended to neutralise his libido. <br><br> From his earliest days in school to his enduring legacy, Turing faced many challenges, yet, stayed true to himself by pursing his love of science and living an open, honest life.
+                        <br><br>
+                        He was given a posthumous royal pardon for his 1952 conviction for homosexuality by Queen Elizabeth in 2013. 
+                    </p>
+			     </div>
+             </div>
+		</div>
+        
+        <div class="spacer"></div>
+		<div class="spacer"></div>
+		<div class="spacer"></div>
+		<div class="spacer"></div>
+		<div class="spacer"></div>
+		<div class="spacer"></div>
+        <div class="spacer"></div>
+		<div class="spacer"></div>
+		<div class="spacer"></div>
+		<div class="spacer"></div>
+		<div class="spacer"></div>
+		<div class="spacer"></div>
+        <div style="background-color:blue">
+        <h2 style="font-size:1em; padding:15px; color:white; text-align:center">&copy;2019 <a href = "http://jakexia.com">jakexia.com</a></h2>
+        </div>
+        
 	</section>
 	
   <script>
