--- a/app/views/index.html
+++ b/app/views/index.html
@@ -95,15 +95,15 @@
 		<div class="spacer"></div>
 		
 
-		<div class="card-columns oneColumnMargin">
+		<div class="masonry oneColumnMargin">
             <div class="spacer"></div>
             <div data-aos ="fade-up" >
-			<div class="card">
+			<div class="item">
 				<img class="card-img" src="/images/cards/2.png" alt="Card image">
 			</div>
             </div>
 			<div data-aos ="fade-up" >
-			<div  class="card p-3 text-right" style="background-color: blue;">
+			<div  class="item p-3 text-right" style="background-color: blue;">
 				<blockquote class="blockquote mb-0">
 					<h2 class="white">I propose to consider the question, 'Can machines think?</h2>
 					<small class = "white">
@@ -113,43 +113,43 @@
 			</div>
             </div>
 			<div data-aos ="fade-up" >
-			<div  class="card">
+			<div  class="item">
 				<img class="card-img" src="/images/machine.png">
 			</div>
             </div>
 			<div data-aos ="fade-up" >
-			<div  class="card">
+			<div  class="item">
 				<img class="card-img" src="/images/cards/3.jpg" alt="Card image">
 			</div>
             </div>
 			<div data-aos ="fade-up" >
-			<div  class="card">
+			<div  class="item">
 				<img class="card-img" src="/images/cards/4.jpg" alt="Card image">
 			</div>
             </div>
 			<div data-aos ="fade-up" >
-			<div  class="card">
+			<div  class="item">
 				<img class="card-img" src="/images/cards/7.jpg" alt="Card image">
 			</div>
             </div>
 			<div data-aos ="fade-up" >
-			<div  class="card">
+			<div  class="item">
 				<img class="card-img" src="/images/cards/6.jpg" alt="Card image">
 			</div>
             </div>
 			<div data-aos ="fade-up" >
-			<div  class="card text-center">
+			<div  class="item text-center">
 					<img class="card-img" src="/images/cards/5.jpg">
 			</div>
             </div>
 			<div class = "spacer"></div>
 			<div data-aos ="fade-up">
-			<div  class="card">
+			<div  class="item">
 				<img class="card-img" src="/images/cards/1.jpg" alt="Card image">
 			</div>
 			</div>
 			<div data-aos ="fade-up" >
-			<div  class="card p-3 text-left" style="background-color: blue;">
+			<div  class="item p-3 text-left" style="background-color: blue;">
 				<blockquote class="blockquote mb-0">
 					<h2 class="white">A computer would deserve to be called intelligent if it could deceive a human into believing that it was human.</h2>
 					<small class = "white">
@@ -159,8 +159,13 @@
             </div>
 			</div>
 			<div data-aos ="fade-up" >
-			<div  class="card">
+			<div  class="item">
 				<img class="card-img" src="/images/moviePoster.jpg" alt="Card image cap">
+			</div>
+            </div>
+            <div data-aos ="fade-up" >
+			<div  class="item">
+				<img class="card-img" src="/images/turing2.jpg" alt="Card image cap">
 			</div>
             </div>
 		</div>
